--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <!-- Container wrapper -->
   <div class="container">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="https://mdbgo.com/">
+    <a class="navbar-brand me-2" href="#">
       <img
         src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.webp"
         height="16"
@@ -34,9 +34,13 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" href="#">Enviar documentos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Ver requerimentos</a>
         </li>
       </ul>
+
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
@@ -44,14 +48,8 @@
           Login
         </button>
         <button type="button" class="btn btn-primary me-3">
-          Sign up for free
+          Cadastre
         </button>
-        <a
-          class="btn btn-dark px-3"
-          href="https://github.com/mdbootstrap/mdb-ui-kit"
-          role="button"
-          ><i class="fab fa-github"></i
-        ></a>
       </div>
     </div>
     <!-- Collapsible wrapper -->
