--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -44,12 +44,12 @@
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
-        <button type="button" class="btn btn-link px-3 me-2">
+        <a type="button" href="/sign-in" class="btn btn-link px-3 me-2">
           Login
-        </button>
-        <button type="button" class="btn btn-primary me-3">
+        </a>
+        <a href="/sign-up" type="button" class="btn btn-primary me-3">
           Cadastre
-        </button>
+        </a>
       </div>
     </div>
     <!-- Collapsible wrapper -->
