--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -34,7 +34,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Enviar documentos</a>
+          <a class="nav-link" href="send-form">Enviar documentos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Ver requerimentos</a>
