--- a/src/app/layouts/login/login.component.html
+++ b/src/app/layouts/login/login.component.html
@@ -10,7 +10,7 @@
       <div class="card">
         <div class="card-body">
 
-          <h2>Realize o login</h2>
+          <h2>Realizar Login</h2>
           <form>
             <mdb-form-control class="mb-4">
               <input
@@ -22,7 +22,7 @@
                 [ngModelOptions]="{ standalone: true }"
               />
               <label mdbLabel class="form-label" for="form1Example1"
-                >Email address</label
+                >CPF ou RNE</label
               >
             </mdb-form-control>
             <mdb-form-control class="mb-4">
@@ -35,11 +35,11 @@
                 [ngModelOptions]="{ standalone: true }"
               />
               <label id="senha" mdbLabel class="form-label" for="form1Example2"
-                >Password</label
+                >Senha</label
               >
             </mdb-form-control>
           </form>
-          <button type="button" class="btn btn-primary" (click)="logar()">Button</button>
+          <button type="button" class="btn btn-primary" (click)="logar()">Acessar</button>
         </div>
       </div>
     </div>
