integration with error

--- a/src/app/layouts/login/login.component.html
+++ b/src/app/layouts/login/login.component.html
@@ -39,7 +39,7 @@
               >
             </mdb-form-control>
           </form>
-          <button type="button" class="btn btn-primary" (click)="logar()">Acessar</button>
+          <button type="button" class="btn btn-primary" (click)="onLogin()">Acessar</button>
         </div>
       </div>
     </div>
