--- a/src/app/layouts/login/login.component.html
+++ b/src/app/layouts/login/login.component.html
@@ -9,7 +9,6 @@
     <div class="col-4">
       <div class="card">
         <div class="card-body">
-
           <h2>Realizar Login</h2>
           <form>
             <mdb-form-control class="mb-4">
@@ -18,31 +17,30 @@
                 type="text"
                 id="form1Example1"
                 class="form-control"
-                [(ngModel)]="login.document"
+                [(ngModel)]="document"
                 [ngModelOptions]="{ standalone: true }"
               />
-              <label mdbLabel class="form-label" for="form1Example1"
-                >CPF ou RNE</label
-              >
+              <label mdbLabel class="form-label" for="form1Example1">CPF ou RNE</label>
             </mdb-form-control>
+
             <mdb-form-control class="mb-4">
               <input
                 mdbInput
                 type="password"
                 id="usuario"
                 class="form-control"
-                [(ngModel)]="login.password"
+                [(ngModel)]="password"
                 [ngModelOptions]="{ standalone: true }"
               />
-              <label id="senha" mdbLabel class="form-label" for="form1Example2"
-                >Senha</label
-              >
+              <label id="senha" mdbLabel class="form-label" for="form1Example2">Senha</label>
             </mdb-form-control>
           </form>
+
           <button type="button" class="btn btn-primary" (click)="onLogin()">Acessar</button>
         </div>
       </div>
     </div>
+
     <div class="col-4"></div>
   </div>
 </div>
