--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,20 +6,20 @@
     </button>
     <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Inicio</a>
+        <li class="nav-item ">
+          <a class="nav-link opcao" aria-current="page" href="#">Inicio</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link opcao" href="#">Contato</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link opcao" href="#">Documentos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contato</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Documentos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link ">Sobre</a>
+          <a class="nav-link opcao">Sobre</a>
         </li>
       </ul>
     </div>
-    <button type="button" class="btn btn-primary">Entrar</button>
+    <a href="/sign-in" type="button" class="btn btn-primary botao">Entrar</a>
   </div>
 </nav>
