--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,8 +1,14 @@
-a{
+.opcao{
     font-size: 25px;
     color: white;
 }
 
 nav{
     background-color: #0135BA;
+}
+
+.botao{
+    width: 100px;
+    height: 40px;
+
 }
