alteracao de escrita no login e likagem prro registro

--- a/src/app/layouts/login/login.component.html
+++ b/src/app/layouts/login/login.component.html
@@ -22,7 +22,7 @@
                 [ngModelOptions]="{ standalone: true }"
               />
               <label mdbLabel class="form-label" for="form1Example1"
-                >Email address</label
+                >CPF/RNE</label
               >
             </mdb-form-control>
             <mdb-form-control class="mb-4">
