--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -7,7 +7,7 @@
     <div class="d-flex flex-column">
       <a class="titulo">O melhor caminho para carteira de visitantes</a>
       <a class="subtitulo mt-5">Bem-vindo ao nosso serviço dedicado a simplificar o processo de obtenção de carteirinhas para visitantes de entes em instituições correcionais. Cadastre-se agora e facilite suas visitas com apenas alguns cliques.</a>
-      <button type="button" class="btn btn-primary botao">Começar</button>
+      <a href="/sign-up" class="btn btn-primary botao">Começar</a>
     </div>
     <div>
       <img src="https://i.imgur.com/BRwZkLz.png" class="imagem" alt="Home-Image"/>
