--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -22,8 +22,9 @@ h1{
 
 .botao{
     width: 192px;
-    height: 48px;
+    height: 40px;
     margin-top: 50px;
+    text-align: center;
 }
 
 .home-page {
