--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -2,6 +2,7 @@ h1{
     margin-top: 20px;
     color: #000000;
     font-size: 45px;
+    font-weight: 240;
 }
 
 .imagem {
@@ -14,6 +15,7 @@ h1{
     font-weight: bold;
     font-size: 40px;
     color: black;
+    font-weight: 100;
 }
 
 .subtitulo{
