--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,8 @@
           <a class="nav-link opcao" href="#">Contato</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link opcao" href="#">Documentos</a>
+          <!-- Link para abrir o PDF -->
+          <a class="nav-link opcao" href="/docs/meuDocumento.pdf" target="_blank">Documentos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link opcao">Sobre</a>
