register implement with error

--- a/src/app/layouts/register/register.component.html
+++ b/src/app/layouts/register/register.component.html
@@ -1,80 +1,40 @@
 <div class="card">
-    <div class=""></div>
-  </div>
-  
   <div class="container">
     <div class="row">
       <div class="col-4"></div>
-  
+
       <div class="col-4">
         <div class="card">
           <div class="card-body">
             <h2>Realizar Cadastro</h2>
-            <form>
+            <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
               <mdb-form-control class="mb-4">
-                <input
-                  mdbInput
-                  type="text"
-                  id="form1Example1"
-                  class="form-control"
-                  [(ngModel)]=""
-                  [ngModelOptions]="{ standalone: true }"
-                />
-                <label mdbLabel class="form-label" for="form1Example1">Nome Completo</label>
+                <input mdbInput type="text" id="fullName" class="form-control" formControlName="name" required />
+                <label mdbLabel class="form-label" for="fullName">Nome Completo</label>
               </mdb-form-control>
+
               <mdb-form-control class="mb-4">
-                <input
-                  mdbInput
-                  type="text"
-                  id="form1Example1"
-                  class="form-control"
-                  [(ngModel)]=""
-                  [ngModelOptions]="{ standalone: true }"
-                />
-                <label mdbLabel class="form-label" for="form1Example1">CPF ou RNE</label>
+                <input mdbInput type="text" id="document" class="form-control" formControlName="document" required />
+                <label mdbLabel class="form-label" for="document">CPF ou RNE</label>
               </mdb-form-control>
+
               <mdb-form-control class="mb-4">
-                <input
-                  mdbInput
-                  type="email"
-                  id="typeEmail"
-                  class="form-control"
-                  [(ngModel)]=""
-                  [ngModelOptions]="{ standalone: true }"
-                />
-                <label mdbLabel class="form-label" for="typeEmail">Email</label>
+                <input mdbInput type="email" id="email" class="form-control" formControlName="email" required />
+                <label mdbLabel class="form-label" for="email">Email</label>
               </mdb-form-control>
-  
+
               <mdb-form-control class="mb-4">
-                <input
-                  mdbInput
-                  type="password"
-                  id="typePassword"
-                  class="form-control"
-                  [(ngModel)]=""
-                  [ngModelOptions]="{ standalone: true }"
-                />
-                <label id="senha" mdbLabel class="form-label" for="typePassword">Senha</label>
+                <input mdbInput type="password" id="password" class="form-control" formControlName="password" required />
+                <label mdbLabel class="form-label" for="password">Senha</label>
               </mdb-form-control>
-              <mdb-form-control class="mb-4">
-                <input
-                  mdbInput
-                  type="password"
-                  id="typePassword"
-                  class="form-control"
-                  [(ngModel)]=""
-                  [ngModelOptions]="{ standalone: true }"
-                />
-                <label id="senha" mdbLabel class="form-label" for="typePassword">Confirmar Senha</label>
-              </mdb-form-control>
+
+              <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Cadastrar</button>
             </form>
-  
-            <button type="button" class="btn btn-primary" (click)="onRegister()">Cadastrar</button>
           </div>
         </div>
       </div>
-  
+
       <div class="col-4"></div>
     </div>
   </div>
-  
+</div>
