--- a/src/app/layouts/register/register.component.html
+++ b/src/app/layouts/register/register.component.html
@@ -9,26 +9,68 @@
             <h2>Realizar Cadastro</h2>
             <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
               <mdb-form-control class="mb-4">
-                <input mdbInput type="text" id="fullName" class="form-control" formControlName="name" required />
-                <label mdbLabel class="form-label" for="fullName">Nome Completo</label>
+                <input
+                  mdbInput
+                  type="text"
+                  id="fullName"
+                  class="form-control"
+                  formControlName="name"
+                  required
+                />
+                <label mdbLabel class="form-label" for="fullName"
+                  >Nome Completo</label
+                >
               </mdb-form-control>
 
               <mdb-form-control class="mb-4">
-                <input mdbInput type="text" id="document" class="form-control" formControlName="document" required />
-                <label mdbLabel class="form-label" for="document">CPF ou RNE</label>
+                <input
+                  mdbInput
+                  type="text"
+                  id="document"
+                  class="form-control"
+                  formControlName="document"
+                  required
+                />
+                <label mdbLabel class="form-label" for="document"
+                  >CPF ou RNE</label
+                >
               </mdb-form-control>
 
               <mdb-form-control class="mb-4">
-                <input mdbInput type="email" id="email" class="form-control" formControlName="email" required />
+                <input
+                  mdbInput
+                  type="email"
+                  id="email"
+                  class="form-control"
+                  formControlName="email"
+                  required
+                />
                 <label mdbLabel class="form-label" for="email">Email</label>
               </mdb-form-control>
 
               <mdb-form-control class="mb-4">
-                <input mdbInput type="password" id="password" class="form-control" formControlName="password" required />
+                <input
+                  mdbInput
+                  type="password"
+                  id="password"
+                  class="form-control"
+                  formControlName="password"
+                  required
+                />
                 <label mdbLabel class="form-label" for="password">Senha</label>
               </mdb-form-control>
-
-              <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Cadastrar</button>
+              <app-date-picker
+                (birthDateChange)="onBirthDateChange($event)"
+                (genderChange)="onGenderChange($event)"
+              >
+              </app-date-picker>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                [disabled]="registerForm.invalid"
+              >
+                Cadastrar
+              </button>
             </form>
           </div>
         </div>
