--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,7 +8,21 @@ nav{
 }
 
 .botao{
-    width: 100px;
+    width: 110px;
     height: 40px;
+    display: flex;
+    align-items: center;
+}
 
+.logo_header{
+    width: 55px;
+    height: 70px;
+    margin-left: 15px;
+    position: absolute;
+}
+
+.entrar{
+    width: 15px;
+    height: 15px;
+    margin-left: 5px;
 }
