--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link opcao" aria-current="page" href="#">Inicio</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link opcao" href="#">Contato</a>
+          <a class="nav-link opcao" href="/contatos">Contato</a>
         </li>
         <li class="nav-item ">
           <!-- Link para abrir o PDF -->
