--- a/src/app/layouts/send-form/send-form.component.scss
+++ b/src/app/layouts/send-form/send-form.component.scss
@@ -6,3 +6,11 @@
   border-radius: 5px;
   padding: 10px;
 }
+
+.center {
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
