--- a/src/app/layouts/send-form/send-form.component.html
+++ b/src/app/layouts/send-form/send-form.component.html
@@ -1,126 +1,9 @@
-<div class="col-6 w-100 d-flex justify-content-center align-items-center m-4">
-  <div class="card">
-    <div class="card-body">
-      <h2>Informe os seus dados</h2>
-      <form>
-        <!-- 2 column grid layout with text inputs for the first and last names -->
-        <div class="row mb-4">
-          <div class="col">
-            <mdb-form-control>
-              <input
-                mdbInput
-                type="text"
-                id="form6Example1"
-                class="form-control"
-              />
-              <label mdbLabel class="form-label" for="form6Example1"
-                >Nome do visitado</label
-              >
-            </mdb-form-control>
-          </div>
-          <div class="col">
-            <mdb-form-control>
-              <input
-                mdbInput
-                type="text"
-                id="form6Example2"
-                class="form-control"
-              />
-              <label mdbLabel class="form-label" for="form6Example2"
-                >RG/RNE do visitado</label
-              >
-            </mdb-form-control>
-          </div>
-        </div>
-
-        <mdb-form-control class="mb-4">
-          <label for="ufSelect" class="form-label"
-            >Selecione um Estado</label
-          >
-          <select
-          id="ufSelect"
-          class="form-select mdb-select"
-          [(ngModel)]="selectedUF"
-          (ngModelChange)="selectedUF && listAllCities(selectedUF)"
-          name="uf"
-          required
-        >
-          <option value="" disabled selected>Escolha um Estado</option>
-          <option *ngFor="let c of UF" [value]="c.sigla">{{ c.sigla }}</option>
-        </select>
-
-
-          <div class="text-danger mt-1">Selecione um Estado!</div>
-        </mdb-form-control>
-        <mdb-form-control class="mb-4">
-          <label for="citySelect" class="form-label">Selecione a Cidade</label>
-          <select
-            id="citySelect"
-            class="form-select mdb-select"
-            [(ngModel)]="selectedCity"
-            name="city"
-            required
-          >
-            <option value="" disabled selected>Escolha uma Cidade</option>
-            <option *ngFor="let c of cities" [value]="c.nome">{{ c.nome }}</option>
-          </select>
-          <div class="text-danger mt-1">Selecione uma cidade!</div>
-        </mdb-form-control>
-
-
-        <!-- Text input -->
-        <mdb-form-control class="mb-4">
-          <input mdbInput type="text" id="form6Example4" class="form-control" />
-          <label mdbLabel class="form-label" for="form6Example4">Rua</label>
-        </mdb-form-control>
-
-        <!-- Email input -->
-        <mdb-form-control class="mb-4">
-          <input
-            mdbInput
-            type="email"
-            id="form6Example5"
-            class="form-control"
-          />
-          <label mdbLabel class="form-label" for="form6Example5">Email</label>
-        </mdb-form-control>
-
-        <!-- Number input -->
-        <mdb-form-control class="form-outline mb-4">
-          <input
-            mdbInput
-            type="number"
-            id="form6Example6"
-            class="form-control"
-          />
-          <label mdbLabel class="form-label" for="form6Example6">Phone</label>
-        </mdb-form-control>
-
-        <!-- Message input -->
-        <mdb-form-control class="form-outline mb-4">
-          <textarea
-            mdbInput
-            class="form-control"
-            id="form6Example7"
-            rows="4"
-          ></textarea>
-          <label mdbLabel class="form-label" for="form6Example7"
-            >Additional information</label
-          >
-        </mdb-form-control>
-
-        <!-- Checkbox -->
-        <!-- <div class="form-check d-flex justify-content-center mb-4">
-          <input mdbCheckbox class="form-check-input me-2" type="checkbox" value="" id="form6Example8"
-            [checked]="true" />
-          <label class="form-check-label" for="form6Example8"> Create an account? </label>
-        </div> -->
-
-        <!-- Submit button -->
-        <button mdbRipple type="button" class="btn btn-primary btn-block mb-4">
-          Place order
-        </button>
-      </form>
-    </div>
-  </div>
+<div class="center">
+  <mdb-tabs>
+    <mdb-tab title="Tab 1">
+      <component-form/>
+    </mdb-tab>
+    <mdb-tab title="Tab 2">Tab content 2</mdb-tab>
+    <mdb-tab title="Tab 3">Tab content 3</mdb-tab>
+  </mdb-tabs>
 </div>
