--- a/src/app/components/form1/form1.component.html
+++ b/src/app/components/form1/form1.component.html
@@ -1,4 +1,4 @@
-<div class="col-6 w-100 d-flex justify-content-center align-items-center m-4">
+<div class="col-9 w-100 d-flex justify-content-center align-items-center ">
   <div class="card">
     <div class="card-body">
       <h2>Informe os seus dados</h2>
@@ -7,64 +7,45 @@
         <div class="row mb-4">
           <div class="col">
             <mdb-form-control>
-              <input
-                mdbInput
-                type="text"
-                id="form6Example1"
-                class="form-control"
-              />
-              <label mdbLabel class="form-label" for="form6Example1"
-                >Nome do visitado</label
-              >
+              <input mdbInput type="text" id="form6Example1" class="form-control" />
+              <label mdbLabel class="form-label" for="form6Example1">Nome do visitado</label>
             </mdb-form-control>
           </div>
           <div class="col">
             <mdb-form-control>
-              <input
-                mdbInput
-                type="text"
-                id="form6Example2"
-                class="form-control"
-              />
-              <label mdbLabel class="form-label" for="form6Example2"
-                >RG/RNE do visitado</label
-              >
+              <input mdbInput type="text" id="form6Example2" class="form-control"
+                [mask]="documentType === 'RNE' ? '99.999.999.999' : '00.000.000-0'" />
+              <label mdbLabel class="form-label" for="form6Example2">RG/RNE do visitado</label>
             </mdb-form-control>
           </div>
         </div>
 
         <mdb-form-control class="mb-4">
-          <label for="ufSelect" class="form-label"
-            >Selecione um Estado</label
-          >
-          <select
-          id="ufSelect"
-          class="form-select mdb-select"
-          [(ngModel)]="selectedUF"
-          (ngModelChange)="selectedUF && listAllCities(selectedUF)"
-          name="uf"
-          required
-        >
-          <option value="" disabled selected>Escolha um Estado</option>
-          <option *ngFor="let c of UF" [value]="c.sigla">{{ c.sigla }}</option>
-        </select>
+          <label for="ufSelect" class="form-label">Selecione um Estado</label>
+          <select id="ufSelect" class="form-select mdb-select" [(ngModel)]="selectedUF"
+            (ngModelChange)="selectedUF && listAllCities(selectedUF)" name="uf" required>
+            <option value="" disabled selected>Escolha um Estado</option>
+            <option *ngFor="let c of UF" [value]="c.sigla">{{ c.sigla }}</option>
+          </select>
 
 
-          <div class="text-danger mt-1">Selecione um Estado!</div>
+        <div class="text-danger mt-1">Selecione um Estado!</div>
         </mdb-form-control>
         <mdb-form-control class="mb-4">
           <label for="citySelect" class="form-label">Selecione a Cidade</label>
-          <select
-            id="citySelect"
-            class="form-select mdb-select"
-            [(ngModel)]="selectedCity"
-            name="city"
-            required
-          >
+          <select id="citySelect" class="form-select mdb-select" [(ngModel)]="selectedCity" name="city" required>
             <option value="" disabled selected>Escolha uma Cidade</option>
             <option *ngFor="let c of cities" [value]="c.nome">{{ c.nome }}</option>
           </select>
           <div class="text-danger mt-1">Selecione uma cidade!</div>
+        </mdb-form-control>
+        <mdb-form-control class="mb-4">
+          <label for="citySelect" class="form-label">Selecione o tipo de visitação</label>
+          <select id="citySelect" class="form-select mdb-select" [(ngModel)]="selectedCity" name="city" required>
+            <option value="" disabled selected>Escolha</option>
+            <option *ngFor="let c of cities" [value]="c.nome">{{ c.nome }}</option>
+          </select>
+          <div class="text-danger mt-1">Selecione o tipo de visitação!</div>
         </mdb-form-control>
 
 
@@ -76,37 +57,20 @@
 
         <!-- Email input -->
         <mdb-form-control class="mb-4">
-          <input
-            mdbInput
-            type="email"
-            id="form6Example5"
-            class="form-control"
-          />
+          <input mdbInput type="email" id="form6Example5" class="form-control" />
           <label mdbLabel class="form-label" for="form6Example5">Email</label>
         </mdb-form-control>
 
         <!-- Number input -->
         <mdb-form-control class="form-outline mb-4">
-          <input
-            mdbInput
-            type="number"
-            id="form6Example6"
-            class="form-control"
-          />
+          <input mdbInput type="number" id="form6Example6" class="form-control" />
           <label mdbLabel class="form-label" for="form6Example6">Phone</label>
         </mdb-form-control>
 
         <!-- Message input -->
         <mdb-form-control class="form-outline mb-4">
-          <textarea
-            mdbInput
-            class="form-control"
-            id="form6Example7"
-            rows="4"
-          ></textarea>
-          <label mdbLabel class="form-label" for="form6Example7"
-            >Additional information</label
-          >
+          <textarea mdbInput class="form-control" id="form6Example7" rows="4"></textarea>
+          <label mdbLabel class="form-label" for="form6Example7">Additional information</label>
         </mdb-form-control>
 
         <!-- Checkbox -->
