--- a/src/app/layouts/register/register.component.html
+++ b/src/app/layouts/register/register.component.html
@@ -1,9 +1,7 @@
 <div class="card">
   <div class="container">
-    <div class="row">
-      <div class="col-4"></div>
-
-      <div class="col-4">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6">
         <div class="card">
           <div class="card-body">
             <h2>Realizar Cadastro</h2>
@@ -59,11 +57,14 @@
                 />
                 <label mdbLabel class="form-label" for="password">Senha</label>
               </mdb-form-control>
-              <app-date-picker
-                (birthDateChange)="onBirthDateChange($event)"
-                (genderChange)="onGenderChange($event)"
-              >
-              </app-date-picker>
+
+              <div class="mb-4">
+                <app-date-picker
+                  (birthDateChange)="onBirthDateChange($event)"
+                  (genderChange)="onGenderChange($event)"
+                ></app-date-picker>
+              </div>
+
               <button
                 type="submit"
                 class="btn btn-primary"
@@ -75,8 +76,6 @@
           </div>
         </div>
       </div>
-
-      <div class="col-4"></div>
     </div>
   </div>
 </div>
