--- a/src/app/components/form1/form1.component.html
+++ b/src/app/components/form1/form1.component.html
@@ -2,18 +2,18 @@
   <div class="card">
     <div class="card-body">
       <h2>Informe os seus dados</h2>
-      <form [formGroup]="sendForm" (ngSubmit)="submitForm()">
+      <form [formGroup]="form" (ngSubmit)="submitForm()">
         <!-- 2 column grid layout with text inputs for the first and last names -->
         <div class="row mb-4">
           <div class="col">
             <mdb-form-control>
-              <input mdbInput type="text" id="name" class="form-control" />
+              <input mdbInput type="text" formControlName="nome_visitado" class="form-control" />
               <label mdbLabel class="form-label" for="form6Example1">Nome do visitado</label>
             </mdb-form-control>
           </div>
           <div class="col">
             <mdb-form-control>
-              <input mdbInput type="text" id="form6Example2" class="form-control"
+              <input mdbInput type="text" formControlName="cpf_rne" class="form-control"
                 [mask]="documentType === 'RNE' ? '99.999.999.999' : '00.000.000-0'" />
               <label mdbLabel class="form-label" for="form6Example2">RG/RNE do visitado</label>
             </mdb-form-control>
@@ -21,16 +21,15 @@
         </div>
 
         <mdb-form-control class="form-outline mb-4">
-          <input mask="(00) 0 0000 0000" mdbInput type="text" [(ngModel)]="telefoneValue"
-          name="telefone" class="form-control" />
-          <label mdbLabel class="form-label" for="form6Example6">Phone</label>
+          <input mask="(00) 0 0000 0000" mdbInput type="text" formControlName="telefone" class="form-control" />
+          <label mdbLabel class="form-label" for="form6Example6">Telefone</label>
         </mdb-form-control>
 
         <div class="row mb-4">
           <div class="col">
             <mdb-form-control>
-              <label for="citySelect" class="form-label">Selecione o tipo de visitação</label>
-              <select id="citySelect" class="form-select mdb-select" [(ngModel)]="selectedTypeVisit" name="typeVisit" required>
+              <label for="typeVisitSelect" class="form-label">Selecione o tipo de visitação</label>
+              <select id="typeVisitSelect" class="form-select mdb-select" formControlName="tipo_visitacao" required>
                 <option value="" disabled selected>Escolha</option>
                 <option *ngFor="let c of typeVisit" [value]="c.label">{{ c.label }}</option>
               </select>
@@ -38,8 +37,8 @@
           </div>
           <div class="col">
             <mdb-form-control>
-              <label for="citySelect" class="form-label">Assunto do requerimento</label>
-              <select id="citySelect" class="form-select mdb-select" [(ngModel)]="selectReqOptions" name="typeVisit" required>
+              <label for="reqOptionsSelect" class="form-label">Assunto do requerimento</label>
+              <select id="reqOptionsSelect" class="form-select mdb-select" formControlName="requerimento_assunto" required>
                 <option value="" disabled selected>Escolha</option>
                 <option *ngFor="let c of reqOptions" [value]="c.label">{{ c.label }}</option>
               </select>
@@ -49,52 +48,40 @@
 
         <mdb-form-control class="mb-4">
           <label for="ufSelect" class="form-label">Selecione um Estado</label>
-          <select id="ufSelect" class="form-select mdb-select" [(ngModel)]="selectedUF"
-            (ngModelChange)="selectedUF && listAllCities(selectedUF)" name="uf" required>
+          <select id="ufSelect" class="form-select mdb-select" formControlName="estado"
+            (ngModelChange)="listAllCities($event)" required>
             <option value="" disabled selected>Escolha um Estado</option>
             <option *ngFor="let c of UF" [value]="c.sigla">{{ c.sigla }}</option>
           </select>
-
-
-        <div class="text-danger mt-1">Selecione um Estado!</div>
+          <div class="text-danger mt-1" *ngIf="form.get('estado') && form.get('estado')">Selecione um Estado!</div>
         </mdb-form-control>
+
         <mdb-form-control class="mb-4">
           <label for="citySelect" class="form-label">Selecione a Cidade</label>
-          <select id="citySelect" class="form-select mdb-select" [(ngModel)]="selectedCity" name="city" required>
+          <select id="citySelect" class="form-select mdb-select" formControlName="cidade" required>
             <option value="" disabled selected>Escolha uma Cidade</option>
             <option *ngFor="let c of cities" [value]="c.nome">{{ c.nome }}</option>
           </select>
-          <div class="text-danger mt-1">Selecione uma cidade!</div>
+          <div class="text-danger mt-1" *ngIf="form.get('cidade') && form.get('cidade')">Selecione uma cidade!</div>
         </mdb-form-control>
 
-
-
-
         <mdb-form-control class="mb-4">
-          <input mdbInput type="text" id="form6Example4" class="form-control" />
+          <input mdbInput type="text" formControlName="bairro" class="form-control" />
           <label mdbLabel class="form-label" for="form6Example4">Bairro</label>
         </mdb-form-control>
+
         <mdb-form-control class="mb-4">
-          <input mdbInput type="text" id="form6Example4" class="form-control" />
+          <input mdbInput type="text" formControlName="rua" class="form-control" />
           <label mdbLabel class="form-label" for="form6Example4">Rua</label>
         </mdb-form-control>
+
         <mdb-form-control class="mb-4">
-          <input mdbInput type="text" id="form6Example4" class="form-control" />
+          <input mdbInput type="text" formControlName="numero_casa" class="form-control" />
           <label mdbLabel class="form-label" for="form6Example4">Número</label>
         </mdb-form-control>
 
-
-
-        <!-- Checkbox -->
-        <!-- <div class="form-check d-flex justify-content-center mb-4">
-          <input mdbCheckbox class="form-check-input me-2" type="checkbox" value="" id="form6Example8"
-            [checked]="true" />
-          <label class="form-check-label" for="form6Example8"> Create an account? </label>
-        </div> -->
-
-        <!-- Submit button -->
-        <button mdbRipple type="button" class="btn btn-primary btn-block mb-4">
-          Place order
+        <button mdbRipple type="submit" class="btn btn-primary btn-block mb-4">
+          Enviar documento
         </button>
       </form>
     </div>
