--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,17 +16,19 @@
         <li class="nav-item ">
           <a class="nav-link opcao" href="/contatos">Contato</a>
         </li>
-        <li class="nav-item ">
+        <li *ngIf="userLogged == true" class="nav-item ">
           <!-- Link para abrir o PDF -->
-          <a class="nav-link opcao" href="/docs/meuDocumento.pdf" target="_blank">Documentos</a>
+          <a class="nav-link opcao" href="/send-form">Documentos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link opcao" href="/sobre">Sobre</a>
         </li>
       </ul>
     </div>
-    <a href="/sign-in" type="button" class="btn btn-primary botao d-flex flex-row">Entrar
+    <a *ngIf="!userLogged" href="/sign-in" type="button" class="btn btn-primary botao d-flex flex-row">Entrar
       <img src="/img/entar.png" alt="Logo" class="entrar"/>
     </a>
+    <span *ngIf="userLogged == true" class="user btn btn-primary botao d-flex flex-row">{{user}}
+    </span>
   </div>
 </nav>
