--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -26,3 +26,10 @@ nav{
     height: 15px;
     margin-left: 5px;
 }
+
+.user {
+  width: 8%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
