fix: fix services and pages login/register

--- a/src/app/layouts/login/login.component.html
+++ b/src/app/layouts/login/login.component.html
@@ -12,7 +12,11 @@
           <h2>Realizar Login</h2>
           <form>
             <mdb-form-control class="mb-4">
-              <input mdbInput type="text" id="form1Example1" class="form-control" [(ngModel)]="document"
+              <input
+                mdbInput type="text"
+                id="form1Example1"
+                class="form-control"
+                [(ngModel)]="document"
                 [ngModelOptions]="{ standalone: true }" />
 
               <label mdbLabel class="form-label" for="form1Example1">CPF ou RNE</label>
@@ -20,7 +24,7 @@
             </mdb-form-control>
 
             <mdb-form-control class="mb-4">
-              <input mdbInput type="password" id="usuario" class="form-control" [(ngModel)]="password"
+              <input mdbInput type="password" id="form1Example2" class="form-control" [(ngModel)]="password"
                 [ngModelOptions]="{ standalone: true }" />
               <label id="senha" mdbLabel class="form-label" for="form1Example2">Senha</label>
             </mdb-form-control>
