Refatoração da tabela user editor

--- a/src/app/components/tabela-solicitantes/tabela-solicitantes.component.html
+++ b/src/app/components/tabela-solicitantes/tabela-solicitantes.component.html
@@ -1,4 +1,11 @@
-<table class="table table-striped">
+
+<app-search-bar></app-search-bar>
+
+<div>
+
+<h3 class="mtop mleft">Solicitaçãoes Pendentes</h3>
+
+<table class="table table-striped mt-2">
     <thead>
       <tr>
         <th scope="col">Numero Protocólo</th>
@@ -13,9 +20,9 @@
         <td>Mark</td>
         <td>Otto</td>
         <td>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a type="button" href="documento-solicitantes" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Abrir Modal
-              </button>
+              </a>
         </td>
       </tr>
       <tr>
@@ -41,21 +48,4 @@
     </tbody>
   </table>
 
-
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Documentação</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          Conteúdo da modal.
-        </div>
-        <div class="modal-footer foter">
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Aprovar</button>
-          <button type="button" class="btn btn-danger">Rejeitar</button>
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
