ajuste no botao da tabela user editor

--- a/src/app/components/tabela-solicitantes/tabela-solicitantes.component.html
+++ b/src/app/components/tabela-solicitantes/tabela-solicitantes.component.html
@@ -20,8 +20,8 @@
         <td>Mark</td>
         <td>Otto</td>
         <td>
-            <a type="button" href="documento-solicitantes" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Abrir Modal
+            <a type="button" href="documento-solicitantes" class=" mleft2 btn-transparent " data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <img class="timg" src="../img/docsBtn.png"/>
               </a>
         </td>
       </tr>
@@ -30,19 +30,18 @@
         <td>Jacob</td>
         <td>Thornton</td>
         <td>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Abrir Modal
-              </button>
-        </td>
+          <a type="button" href="documento-solicitantes" class=" mleft2 btn-transparent " data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img class="timg" src="../img/docsBtn.png"/>
+          </a>
       </tr>
       <tr>
         <th scope="row">3</th>
         <td>Larry</td>
         <td>the Bird</td>
         <td>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Abrir Modal
-              </button>
+          <a type="button" href="documento-solicitantes" class=" mleft2 btn-transparent " data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img class="timg" src="../img/docsBtn.png"/>
+          </a>
         </td>
       </tr>
     </tbody>
