--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,14 +1,18 @@
-
 <div class="container">
-	<div class="row mtop">
-           <div id="custom-search-input">
-                            <div class="input-group col-md-12">
-                                <input type="text" class="  search-query form-control" placeholder="Buscar requerimento, nome, protocolo ou data." />
-                                
-                                    <button class="btn fundoazul" type="button">
-                                        <img class="btnSearch" src="/img/btnSearch.png"/>
-                                    </button>
-                            </div>
-                        </div>
-	</div>
-</div>
+    <div class="row mtop">
+      <div id="custom-search-input" class="col-md-12">
+        <div class="input-group">
+          <input 
+            type="text" 
+            class="search-query form-control" 
+            placeholder="Buscar requerimento, nome, protocolo ou data." 
+            (input)="onSearchChange($event)"  
+          />
+          <button class="btn fundoazul" type="button">
+            <img class="btnSearch" src="/img/btnSearch.png" />
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
