--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -36,3 +36,11 @@
 .mtop{
     margin-top: 30px;
 }
+
+#custom-search-input {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+    margin-bottom: 10px; /* Ajuste o espaçamento conforme necessário */
+  }
+  
