--- a/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
+++ b/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
@@ -2,7 +2,7 @@
   <h3 class="mtop mleft">Solicitações Pendentes</h3>
 
   <!-- Barra de pesquisa (logo abaixo do título) -->
-  <app-search-bar (search)="onSearch($event)"></app-search-bar> <!-- Aqui você faz o binding do evento para chamar a função onSearch -->
+  <!-- <app-search-bar (search)="onSearch($event)"></app-search-bar>      IMPLEMENTACAO POSTERIOR   --> 
 
   <table class="table table-striped mt-2">
     <thead>
