--- a/src/app/layouts/documentos-solicitantes/documentos-solicitantes.component.scss
+++ b/src/app/layouts/documentos-solicitantes/documentos-solicitantes.component.scss
@@ -41,3 +41,15 @@
     border-radius: 5px;
     box-shadow: '1px #000000';
 }
+
+.section2Wrapper{
+    display: flex;
+
+}
+
+.section1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 45px;
+}
